# frontier-model-framework

./: .gitignore  AGENTS.md  BUILD_PLAN.md  BUILD_PLAN_V2.md  BUILD_PLAN_V3.md  BUILD_TODOS.md  CHANGELOG.md  MIGRATION.md  README.md  env_vars_template.md  fmf.example.yaml  fmf.yaml  main.py  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
artefacts/: index.json
artefacts/20250915T022217Z/: analysis.csv  analysis.jsonl
artefacts/20250915T022252Z/: analysis.jsonl  text_outputs.jsonl
artefacts/20250924T024618Z/: analysis.csv  analysis.jsonl  image_outputs.jsonl
artefacts/20250924T024619Z/: text_outputs.jsonl
artefacts/20250924T025536Z/: manifest.json  run.yaml
artefacts/20250924T025603Z/: manifest.json  run.yaml
artefacts/20250924T025703Z/: analysis.jsonl  image_outputs.jsonl
artefacts/20250924T031125Z/: manifest.json  run.yaml
data/: sample-text.txt  sample.csv
docker/: Dockerfile.batch  Dockerfile.lambda
docs/: CONFIGURATION.md  DEPLOYMENT.md  IAM_POLICIES.md  MIGRATION.md  TECH_REVIEW.md  USAGE.md  scripts.md
docs/adr/: ADR-001-sdk-first.md
docs/archive_build_plans/: BUILD_PLAN.md  BUILD_PLAN_V3.md  BUILD_TODOS.md
docs/deepdive/: ARCHITECTURE.md  BACKLOG.md  CODE_HEALTH.md  DX.md  EXEC_SUMMARY.md  REMEDIATION_DELTA.md  REMEDIATION_NOTES.md  REMEDIATION_PLAN.md  ROBUSTNESS.md  SECURITY.md  TESTING.md
docs/design/: MODE_SUPPORT.md
docs/major-feature-overhauls/: Langchain-enhancement.md  (+1 more)
docs/review/: DIFFS.patch  (+9 more)
examples/: README.md  analyse_csv.py  analyse_csv_bedrock.py  analyse_csv_s3_bedrock.py  dataframe_analyse.py  example_1.md  fabric_comments.py  fmf.example.yaml  images_analyse.py  sdk_demo.py  secrets_test.py  text_analysis.py  text_to_json.py
prompts/: index.yaml
scripts/: analyse_csv.py  analyse_csv_recipe.py  analyse_csv_sdk.py  ci_quality.sh  ci_security.sh  fabric_comments.py  images_multi.py  text_to_json.py  text_to_json_sdk.py
tests/: test_artefact_index_retention.py  test_auth_providers.py  test_chain_join_interpolation.py  test_chain_json_enforcement.py  test_chain_loader.py  test_chain_multimodal_runner.py  test_chain_outputs_as_csv.py  test_chain_outputs_as_parquet.py  test_chain_outputs_from.py  test_chain_outputs_save.py  test_chain_rag_integration.py  test_chain_row_mode.py  test_chain_runner.py  test_cli_connect.py  test_cli_doctor.py  test_cli_exits.py  test_cli_export.py  test_cli_export_records.py  test_cli_infer.py  test_cli_keys.py  test_cli_process.py  test_cli_prompt_register.py  test_cli_run.py  test_cli_sdk_wrappers.py  test_config_integration.py  test_config_models.py  test_connectors_base.py  test_connectors_hardening.py  test_connectors_local.py  test_connectors_s3.py  test_connectors_s3_moto.py  test_connectors_sharepoint.py  test_dependencies.py  test_deploy_docs.py  test_effective_config.py  test_ergonomics.py  test_examples_docs.py  test_examples_smoke.py  test_export_write_modes.py  test_exporters_dynamodb.py  (+33 more)
(+100 files in other folders)
